# Pumpy_v3

./: .dockerignore  .gitignore  .replit  .replitignore  CODE_REVIEW_ISSUES.md  pnpm-lock.yaml  replit.md  replit.nix
artifacts/api-server/: build.mjs  package.json
artifacts/dashboard/: index.html  vite.config.ts
attached_assets/: Pasted--PumpyPumpyFunBotTrade-Gap-Analysis-Recommendations-Bas_1776292369572.txt  Pasted-Your-task-is-to-continue-developing-the-existing-reposi_1776254618235.txt
docs/: backup.md
docs/runbooks/: 01-halted-wallet-recovery.md  02-jito-bundle-failure.md  03-key-rotation.md  backup-restore.md  halted-wallet.md  jito-bundle-failures.md  key-rotation.md
docs/scripts/: backup.sh
lib/api-spec/: openapi.yaml
python-strategy/: .env.example  config.py  main.py  requirements.txt  strategy_engine.py
python-strategy/analytics/: __init__.py  data_collector.py
python-strategy/api/: routes.py
python-strategy/checkpoints/: momentum_buffers.joblib
rust-engine/: .env.example  Cargo.toml  build.rs
rust-engine/.cargo/: config.toml
rust-engine/proto/: bot.proto
rust-engine/src/: config.rs  constants.rs  database.rs  grpc_server.rs  main.rs  metrics.rs  wallet_worker.rs  websocket.rs
rust-engine/src/decision/: mod.rs
rust-engine/src/mev/: jito.rs  mempool.rs  mod.rs  sandwich.rs
rust-engine/src/order/: manager.rs  mod.rs
rust-engine/src/pumpfun/: bonding_curve.rs  instructions.rs  mod.rs
rust-engine/src/rpc/: mod.rs
rust-engine/src/transaction/: mod.rs
scripts/: build-production.sh  run-production.sh
(+57 files in other folders)
