[package]
name = "pumpfun-trading-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trading-engine"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"

# gRPC
tonic = "0.12"
tonic-health = "0.12"
prost = "0.13"

# Solana
solana-client = "2.1"
solana-sdk = "2.1"
solana-account-decoder = "2.1"

# HTTP client (for Jito)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
base64 = "0.22"
bs58 = "0.5"
dotenvy = "0.15"
futures-util = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }

# Prometheus metrics
prometheus = { version = "0.13", features = ["process"] }

[build-dependencies]
tonic-build = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
